--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,6 +6,6 @@
   <% end %>
 </ul>
 
-<div class="col-sm-3 text-end">
+<div class="col-sm-3">
         <a href="/places/new/" class="btn btn-success">New Place</a>
       </div>
