--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,17 +1,20 @@
 <h1><%= @place.name %></h1>
 
-<% for post in @place.posts %>
-  <h3><%= post.title %></h3>
-  <h4><%= post.posted_on %></h4>
-  <p><%= post.description %></p>
-<% end %>
 
-<div class="col-sm-3 text-end">
+<div class="col-sm-3">
         <a href="/posts/new/" class="btn btn-success">New Post</a>
       </div>
 
+<div class = "row">
+  <% for post in @place.posts %>
+    <div class ="col-md-3 col-sm-6">
+      <h3><%= post.title %></h3>
+      <h4><%= post.posted_on %></h4>
+      <p><%= post.description %></p>
+      </div>
+<% end %>
+</div>
 
-
-<div class="col-sm-3 text-end">
+<div class="col-sm-3">
         <a href="/places" class="btn btn-success">Back to All Places</a>
       </div>
