--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,17 +2,25 @@
 
 <% if @current_user %>
   <%= form_with model: @post do |form| %>
+    
     <div class="mb-3">
-      <%= form.label "body", class: "form-label" %>
-      <%= form.text_field "body", class: "form-control" %>
+      <%= form.label "title", class: "form-label" %>
+      <%= form.text_field "title", class: "form-control" %>
     </div>
 
     <div class="mb-3">
-      <%= form.label "uploaded_image", class: "form-label" %>
-      <%= form.file_field "uploaded_image", accept: "image/png,image/jpg,image/jpeg", class: "form-control" %>
+      <%= form.label "description", class: "form-label" %>
+      <%= form.text_field "description", class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label "posted_on", class: "form-label" %>
+      <%= form.date_field "posted_on", class: "form-control" %>
     </div>
 
     <%= form.submit "Create Post", class: "btn btn-primary" %>
+
+    <%= form.hidden_field "place_id" %>
   <% end %>
 <% else %>
   You must first <a href="/sessions/new">login</a> to post.
