fixed link in the show for places

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="col-sm-3">
-        <a href="/posts/new/" class="btn btn-success">New Post</a>
+        <a href="/posts/new?place_id=<%= @place.id %>" class="btn btn-success">New Post</a>
       </div>
 
 <div class = "row">
