--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,6 +18,11 @@
       <%= form.date_field "posted_on", class: "form-control" %>
     </div>
 
+    <div class="mb-3">
+      <%= form.label "uploaded_image", class: "form-label" %>
+      <%= form.file_field "uploaded_image", accept: "image/png,image/jpg,image/jpeg", class: "form-control" %>
+    </div>
+
     <%= form.submit "Create Post", class: "btn btn-primary" %>
 
     <%= form.hidden_field "place_id" %>
