--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,7 +8,7 @@
       </div>
 
 <div class = "row">
-  <% for post in @place.posts %>
+  <% for post in @place.posts.where({ user_id: session[:user_id] }) %>
     <div class ="col-md-3 col-sm-6">
       <h3><%= post.title %></h3>
       <h4><%= post.posted_on %></h4>
